refactor: consolidate JSON decoders/encoders per Bounded Context
Each Bounded Context now has exactly one *JsonDecoders and one
*JsonEncoders class:

- lesson: AnswerJsonDecoders + CommentJsonDecoders + ProblemJsonDecoders
  → LessonJsonDecoders. AnswerJsonEncoders + ProblemJsonEncoders
  → LessonJsonEncoders. encode method names disambiguated as
  encodeProblem / encodeAnswer / encodeComment. CommentsResource's
  inline POST response shape now goes through encodeComment so
  POST and GET return the same comment representation (including
  answerId).
- user: inline Decoders inside OffersResource and
  GrantTeacherRoleResource moved into UserJsonDecoders as OFFER and
  GRANT_TEACHER_ROLE. encode → encodeUser; OffersResource's inline
  encode → UserJsonEncoders.encodeOffer.
- notification: WhatsNewsResource's inline list-element encoder
  extracted into NotificationJsonEncoders.encodeWhatsNew.